/* Translations */ <United States of America#49024628>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -110,7 +110,7 @@
 * Kashmiri: {{t|ks|संयुक्त राज्‍य अमेरिका|tr=sanyukta rājya amerikā|sc=ks-Arab}}
 * Kazakh: {{t|kk|Америка Құрама Штаттары|sc=Cyrl}}
 * Khakas: {{t|kjh|Американың Піріккен Штаттары|sc=Cyrl}}
-* Khmer: {{t+|km|សហរដ្ឋអាមេរិក|tr=sahā rōŭt āmērik|sc=Khmr}}, {{t|km|អាមេរិក|tr=’aameirik|sc=Khmr}}
+* Khmer: {{t+|km|សហរដ្ឋអាមេរិក}}, {{t|km|អាមេរិក}}
 * Komi-Permyak: {{t|koi|Америкаса Ӧтувтӧм Штатъяс}}
 * Korean: {{t|ko|^미국}} ({{t+|ko|美國}}), {{t|ko|^아메리카 합중국}}, {{t|ko|^미합중국}} ({{t|ko|美合衆國}})
 * Kurdish:
