t+bg:[[направо]] ([[WT:EDIT|Assisted]]) <straight#49025131>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -326,6 +326,7 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 {{trans-top|in a forward direction}}
 * Arabic:
 *: Hijazi Arabic: {{t|acw|على طول|tr=ʿala ṭūl|sc=Arab}}, {{t|acw|دغري|tr=duḡri|sc=Arab}} {{qualifier|obsolete}}
+* Bulgarian: {{t+|bg|направо}}
 * Czech: {{t+|cs|přímo}}
 * Dutch: {{t+|nl|rechtdoor}}
 * Finnish: {{t+|fi|suoraan}}
