--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -128,6 +128,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Uzbek: {{t+|uz|qusmoq}}
 * Venetian: {{t|vec|gomitar}}, {{t|vec|vomegar}}, {{t|vec|rénder}}, {{t|vec|réndar}}, {{t|vec|riméter}}, {{t+|vec|rimétar}}, {{t|vec|reméter}}, {{t|vec|remétar}}
 * Vietnamese: {{t+|vi|nôn}}, {{t+|vi|mửa}}
+* Walloon: {{t+|wa|rivômi}}, {{t|wa|vômi}}, {{t+|wa|rinåder}} {{qualifier|unpolite}}
 * Welsh: {{t+|cy|chwydu}}
 * Yiddish: {{t|yi|ברעכן}}, {{t|yi|אויסברעכן}}, {{t|yi|צוריקגעבן}}
 * Zazaki: {{t|zza|vırecen}}
