--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Alternative forms===
-* {{l|en|Jugoslavia}} (''common pre-WWII spelling'')
+* {{alter|en|Jugoslavia||common pre-WWII spelling}}
 
 ===Etymology===
 Borrowed from {{bor|en|sh|Jugoslavija}}, in turn from {{m|sh|jug|jugo|south}} and {{m|sh|slavija||''slavia'', the land of the [[Slav]]s}}. Literally, ''the land of the southern Slavs''.
