--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -59,6 +59,12 @@ Cognate to English {{m|en|basis}}, from PIE via Ancient Greek.
 # {{senseid|en|orgasm}}{{lb|en|intransitive|slang}} To achieve [[orgasm]]; to [[cum]]; to [[ejaculate]].
 #* '''2004''', {{w|Alan Hollinghurst}}, ''{{w|The Line of Beauty}}'', Bloomsbury, 2005, Chapter 2:
 #*: Nick was more and more seriously absorbed, but then just before he '''came''' he had a brief vision of himself, as if the trees and bushes had rolled away and all the lights of London shone in on him: little Nick Guest from Barwick, Don and Dot Guest's boy, fucking a stranger in a Notting Hill garden at night.
+#* {{quote-book
+|year=2008
+|author={{w|Philip Roth}}
+|title={{w|Indignation (novel)|Indignation}}
+|section=
+|passage= The sheer unimaginableness of '''coming''' into her mouth — of '''coming''' into anything other than the air or a tissue or a dirty sock — was an allurement too stupendous for a novice to forswear.}}
 #: {{ux|en|He '''came''' after a few minutes.}}
 # {{lb|en|copulative|figuratively|with ''close''}} To [[approach]] a state of being or accomplishment.
 #: {{ux|en|They '''came''' very close to leaving on time.&nbsp;&nbsp; His test scores '''came''' close to perfect.}}
