--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -653,7 +653,7 @@ From {{inh|ga|sga|port||bank, shore (of river or sea); landing-place, haven; ban
 * {{l|ga|taobhfort|g=m||traverse}}
 
 ===Mutation===
-{{ga mut cons|p|ort}}
+{{ga-mut}}
 
 ===References===
 * {{R:ga:ODonaill}}
