--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -110,7 +110,7 @@ Borrowed from {{bor|en|fr|France}}, {{der|en|fro|France}}, from {{der|en|la|Fran
 * Kashmiri: {{t|ks|फ्रांस|sc=ks-Arab}}
 * Kashubian: {{t+|csb|Francëjô|f}}
 * Kazakh: {{t+|kk|Франция}}
-* Khmer: {{t+|km|បារាំង|sc=Khmr|tr=baarang}}
+* Khmer: {{t+|km|បារាំង}}
 * Kikuyu: {{t|ki|Frans}}
 * Korean: {{t|ko|^프랑스}}
 * Kurdish:
