--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -137,7 +137,7 @@ Borrowed from {{bor|en|fr|France}}, {{der|en|fro|France}}, from {{der|en|la|Fran
 * Maori: {{t|mi|Parani}}, {{t+|mi|Wīwī}}
 * Marathi: {{t|mr|फ्रांस|sc=Deva}}
 * Meru: {{t|mer|Frans}}
-* Mongolian: {{t+|mn|Франц}}, {{t|mn|Франц улс}}
+* Mongolian: {{t+|mn|Франц}}, {{t|mn|[[Франц]] [[улс]]}}
 * Nauruan: {{t|na|France}}
 * Navajo: {{t|nv|Dáághahii Dineʼé bikéyah|sc=Latn}}
 * Neapolitan: {{t|nap|Franza|f}}
