--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -92,7 +92,7 @@ From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gem-pro|*felta
 #: {{rfquotek|Sir M. Hale}}
 # {{lb|en|transitive}} To cover with, or as if with, felt.
 #: ''to '''felt''' the cylinder of a steam engine''
-
+# {{lb|en|transitive}}''(poker)'' To cause a player to lose all their chips.
 =====Translations=====
 {{trans-top|make into felt}}
 * Dutch: {{t+|nl|vilten}}
