--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -38,60 +38,58 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 # {{lb|en|obsolete|rare}} [[strait|Strait]]; [[narrow]].
 #* Sir {{w|John Mandeville}} (c.1350)
 #*: Egypt is a long country, but it is '''straight''', that is to say, narrow.
-# ''Figurative uses.''
-## Free from [[dishonesty]]; [[honest]], law-abiding. {{defdate|from 16th c.}}
-##* '''1879''', {{w|Anthony Trollope}}, ''John Caldigate'':
-##*: ‘It wasn't the proper thing, squoire. It wasn't '''straight'''.’
-## [[direct|Direct]] in communication; [[unevasive]], [[straightforward]]. {{defdate|from 19<sup>th</sup>c.}}
-##* '''2003''', Rosie Cowan, ''{{w|The Guardian}}'', 24 April:
-##*: Tony Blair issued a direct challenge to the IRA yesterday when he demanded they give '''straight''' answers to three simple questions{{nb...}}.
-## In a row, in unbroken [[sequence]]. {{defdate|from 19<sup>th</sup>c.}}
-##* {{quote-journal|date=September 24, 2011|author=David Ornstein|work=BBC Sport
+# Free from [[dishonesty]]; [[honest]], law-abiding. {{defdate|from 16th c.}}
+#* '''1879''', {{w|Anthony Trollope}}, ''John Caldigate'':
+#*: ‘It wasn't the proper thing, squoire. It wasn't '''straight'''.’
+# [[direct|Direct]] in communication; [[unevasive]], [[straightforward]]. {{defdate|from 19<sup>th</sup>c.}}
+#* '''2003''', Rosie Cowan, ''{{w|The Guardian}}'', 24 April:
+#*: Tony Blair issued a direct challenge to the IRA yesterday when he demanded they give '''straight''' answers to three simple questions{{nb...}}.
+# In a row, in unbroken [[sequence]]. {{defdate|from 19<sup>th</sup>c.}}
+#* {{quote-journal|date=September 24, 2011|author=David Ornstein|work=BBC Sport
 |title=[http://news.bbc.co.uk/sport2/hi/football/14958156.stm Arsenal 3-0 Bolton]
 |passage=It moves them from 17th to 12th on seven points, while Bolton are now bottom of the table with five '''straight''' defeats.}}
-##* '''2008''', "Bad vibrations", ''{{w|The Economist}}'', 30 October:
-##*: As of October 29th, three-month dollar Libor (the rate at which banks borrow from each other) had fallen for 13 '''straight''' days and was nearly one-and-a-half percentage points below its October 10th level.
-## In proper order; as it should be. {{defdate|from 19<sup>th</sup>c.}}
-##* '''2007''', Grant Allen, ''What's Bred in the Bone'', p.140:
-##*: Oh, music, how he loved it; it seemed to set everything '''straight''' all at once in his head.
-##* '''2010''', Paul Gallagher, ''{{w|The Observer}}'', 15 August:
-##*: "If you wonder why folks can't take the news seriously, here's Exhibit A," said one blogger. "Lord Jesus, how can the reporter file this story with a '''straight''' face?"
-## Of [[spirit]]s: [[undiluted]], [[unmixed]]; [[neat]]. {{defdate|from 19<sup>th</sup>c.}}
-##* '''2003''', Ron Jordan, ''Considerations'':
-##*: Real cowboys know how to rope, ride a horse and drink whisky '''straight'''.
-##* '''2003''', Lowell Edmunds, ''Martini, Straight Up'', p.94:
-##*: The Martini is still in ''belief'', if not in fact, the centerpiece of a rite, and people who would not drink '''straight''' gin on the rocks will drink '''straight''' gin on the rocks if it is called a Martini.
-## {{lb|en|cricket}} Describing the [[bat]] as held so as not to [[incline]] to either side; on, or near a line running between the two [[wicket]]s. {{defdate|from 19<sup>th</sup>c.}}
-##* '''2011''', Alan Gardner & Barney Ronay, ''{{w|The Guardian}}'', 15 March:
-##*: Steyn continues and it's all a bit more orderly down his end as O'Brien defends the first three balls with a '''straight''' bat and a respectful dip of the head.
-## {{lb|en|tennis}} Describing the [[set]]s in a [[match]] of which the winner did not lose a single set. {{defdate|from 19<sup>th</sup>c.}}
-##* '''2011''', Press Association, 10 February:
-##*: Murray started well against Marcos Baghdatis before slumping to defeat in '''straight''' sets and the British No1 admitted he may not have been mentally prepared for the rigours of the ATP Tour after a gruelling start to 2011.
-## {{lb|en|US|politics}} Making no exceptions or deviations in one's support of the organization and candidates of a political party.
-##: {{ux|en|a '''straight''' Republican;&emsp; a '''straight''' Democrat}}
-## {{lb|en|US|politics}} Containing the names of all the regularly nominated candidates of a party and no others.
-##: {{ux|en|a '''straight''' ballot}}
-# ''Colloquial uses.''
-## {{lb|en|colloquial}} [[conventional|Conventional]], [[mainstream]], socially acceptable. {{defdate|from 20<sup>th</sup>c.}}
-##* '''1994''', {{w|Jarvis Cocker}}, ‘Do You Remember the First Time?’:
-##*: You say you've got to go home. Well at least there's someone there that you can talk to. And you never have to face up to the night on your own. Jesus, it must be great to be '''straight'''.
-##* {{quote-book|author=Tracy Quan|authorlink=Tracy Quan|title=Diary of a Manhattan Call Girl: A Novel|location=New York, N.Y.|publisher=[[w:Crown Publishing Group|Crown Publishers]]|year=2007|isbn=978-0-307-42056-5|passage="When you say he's a '''straight''' guy, you mean{{nb...}}?" I held up my left hand as if it were a shield and spun my ring around. I told her: "He works on Wall Street.{{...}}He wouldn't understand my business. He's always had a '''straight''' job. His entire life he's been so&nbsp;– so normal that he doesn't even know how normal he is.{{...}}He doesn't know I'm a hooker. I'm pretending to be a '''straight''' chick. And it's working! And that makes him a straight guy. It's&nbsp;... I feel like Dr. Frankenhooker."}}
-##* '''1998''', Eileen Fitzpatrick & Dominic Pride, ''[[w:Billboard (magazine)|Billboard]]'', 17 October 1998:
-##*: ‘Her last album was a bit too '''straight''',’ he says, ‘but this one puts her in a more contemporary framework and softens her music.’
-## {{lb|en|colloquial}} Not using [[alcohol]], [[drugs]], ''etc.'' {{defdate|from 20<sup>th</sup>c.}}
-##* '''1989''', {{w|Gus Van Sant}}, ''{{w|Drugstore Cowboy}}'':
-##*: For all the boredom the '''straight''' life brings, it's not too bad.
-##* '''2001''', Ruella Frank, ''Body of Evidence'', p.28:
-##*: ‘Alex's dad used a lot of drugs. He's been '''straight''' for years now, but it took a long time for him to be able to deal with his feelings.’
-## {{lb|en|colloquial}} [[heterosexual|Heterosexual]].
-##* {{quote-book|author=Laura Harris|author2=Elizabeth Crocker|title=Femme: Feminists, Lesbians, and Bad Girls|location=New York, N.Y.|publisher={{w|Routledge}}|year=1997|page=196|isbn=978-0-415-91874-9|passage=We only appear '''straight''' for the first five seconds. Just walking down the street, in the diner, or at the boardwalk, we hear, "Is she a man? Is she a woman? If she is a '''straight''' woman, what is she doing with this gay man?" We check in with each other. "What do you think, is it okay? I think we should go. I think we should cross over to the other side. Danger."}}
-##* {{quote-book|author=Helen Boyd|title=My Husband Betty: Love, Sex, and Life with a Crossdresser|location=New York, N.Y.|publisher=[[w:Perseus Books Group|Thunder's Mouth Press]]|year=2003|page=187|isbn=978-1-56025-515-4|passage=["]{{...}}He's a '''straight''' guy who does drag." At that, the man laughed. "Oh, you're putting me on!" He decided I must have been pulling his leg the whole time. He glanced back at my husband again. "So what's his number?" "The same as mine."}}
-##* '''2007''', Layla Kumari, ''{{w|The Guardian}}'', 17 September:
-##*: Some of my friends – gay and '''straight''' – seem unable to understand the close but platonic nature of my and Gian's relationship, but have been supportive.
-##* '''2011''', Jodi Picoult, ''Sing You Home'', p.273:
-##*: Angela smiles. ‘I'm '''straight''', Zoe, and I'm happily married.’
-##* {{quote-book|author=Wheeler Winston Dixon|authorlink=Wheeler Winston Dixon|title=Straight: Constructions of Heterosexuality in the Cinema|location=Albany, N.Y.|publisher={{w|State University of New York Press}}|year=2012|page=1|isbn=978-0-7914-8733-4|passage=Every other mode of social discourse is "other," whether it be termed ''gay'' (or the newly acceptable ''queer''), ''bisexual'', or ''asexual'', or embodied in the concept of the ''spinster'', the ''confirmed bachelor'', the ''old maid'', or the ''same-sex couple'' who will never fit into the "'''straight'''" world, and doesn't or don't want to. The state of nonstraightness is essentially suspect; it is not seen as "right [or] correct."}}
-##* {{quote-book|author=Katie Price|authorlink=Katie Price|title=He's the One|location=London|publisher=[[w:Random House|Century]]|year=2013|page=233|isbn=978-1-84605-959-9|passage=Why did he have to be '''straight'''? It's my tragedy. When we went camping with the school, we shared a tent. I was hoping for a ''{{w|Brokeback Mountain}}'' moment. I mean, I know he's straight, but there's always hope.}}
+#* '''2008''', "Bad vibrations", ''{{w|The Economist}}'', 30 October:
+#*: As of October 29th, three-month dollar Libor (the rate at which banks borrow from each other) had fallen for 13 '''straight''' days and was nearly one-and-a-half percentage points below its October 10th level.
+# In proper order; as it should be. {{defdate|from 19<sup>th</sup>c.}}
+#* '''2007''', Grant Allen, ''What's Bred in the Bone'', p.140:
+#*: Oh, music, how he loved it; it seemed to set everything '''straight''' all at once in his head.
+#* '''2010''', Paul Gallagher, ''{{w|The Observer}}'', 15 August:
+#*: "If you wonder why folks can't take the news seriously, here's Exhibit A," said one blogger. "Lord Jesus, how can the reporter file this story with a '''straight''' face?"
+# Of [[spirit]]s: [[undiluted]], [[unmixed]]; [[neat]]. {{defdate|from 19<sup>th</sup>c.}}
+#* '''2003''', Ron Jordan, ''Considerations'':
+#*: Real cowboys know how to rope, ride a horse and drink whisky '''straight'''.
+#* '''2003''', Lowell Edmunds, ''Martini, Straight Up'', p.94:
+#*: The Martini is still in ''belief'', if not in fact, the centerpiece of a rite, and people who would not drink '''straight''' gin on the rocks will drink '''straight''' gin on the rocks if it is called a Martini.
+# {{lb|en|cricket}} Describing the [[bat]] as held so as not to [[incline]] to either side; on, or near a line running between the two [[wicket]]s. {{defdate|from 19<sup>th</sup>c.}}
+#* '''2011''', Alan Gardner & Barney Ronay, ''{{w|The Guardian}}'', 15 March:
+#*: Steyn continues and it's all a bit more orderly down his end as O'Brien defends the first three balls with a '''straight''' bat and a respectful dip of the head.
+# {{lb|en|tennis}} Describing the [[set]]s in a [[match]] of which the winner did not lose a single set. {{defdate|from 19<sup>th</sup>c.}}
+#* '''2011''', Press Association, 10 February:
+#*: Murray started well against Marcos Baghdatis before slumping to defeat in '''straight''' sets and the British No1 admitted he may not have been mentally prepared for the rigours of the ATP Tour after a gruelling start to 2011.
+# {{lb|en|US|politics}} Making no exceptions or deviations in one's support of the organization and candidates of a political party.
+#: {{ux|en|a '''straight''' Republican;&emsp; a '''straight''' Democrat}}
+# {{lb|en|US|politics}} Containing the names of all the regularly nominated candidates of a party and no others.
+#: {{ux|en|a '''straight''' ballot}}
+# {{lb|en|colloquial}} [[conventional|Conventional]], [[mainstream]], socially acceptable. {{defdate|from 20<sup>th</sup>c.}}
+#* '''1994''', {{w|Jarvis Cocker}}, ‘Do You Remember the First Time?’:
+#*: You say you've got to go home. Well at least there's someone there that you can talk to. And you never have to face up to the night on your own. Jesus, it must be great to be '''straight'''.
+#* {{quote-book|author=Tracy Quan|authorlink=Tracy Quan|title=Diary of a Manhattan Call Girl: A Novel|location=New York, N.Y.|publisher=[[w:Crown Publishing Group|Crown Publishers]]|year=2007|isbn=978-0-307-42056-5|passage="When you say he's a '''straight''' guy, you mean{{nb...}}?" I held up my left hand as if it were a shield and spun my ring around. I told her: "He works on Wall Street.{{...}}He wouldn't understand my business. He's always had a '''straight''' job. His entire life he's been so&nbsp;– so normal that he doesn't even know how normal he is.{{...}}He doesn't know I'm a hooker. I'm pretending to be a '''straight''' chick. And it's working! And that makes him a straight guy. It's&nbsp;... I feel like Dr. Frankenhooker."}}
+#* '''1998''', Eileen Fitzpatrick & Dominic Pride, ''[[w:Billboard (magazine)|Billboard]]'', 17 October 1998:
+#*: ‘Her last album was a bit too '''straight''',’ he says, ‘but this one puts her in a more contemporary framework and softens her music.’
+# {{lb|en|colloquial}} Not using [[alcohol]], [[drugs]], ''etc.'' {{defdate|from 20<sup>th</sup>c.}}
+#* '''1989''', {{w|Gus Van Sant}}, ''{{w|Drugstore Cowboy}}'':
+#*: For all the boredom the '''straight''' life brings, it's not too bad.
+#* '''2001''', Ruella Frank, ''Body of Evidence'', p.28:
+#*: ‘Alex's dad used a lot of drugs. He's been '''straight''' for years now, but it took a long time for him to be able to deal with his feelings.’
+# {{lb|en|colloquial}} [[heterosexual|Heterosexual]].
+#* {{quote-book|author=Laura Harris|author2=Elizabeth Crocker|title=Femme: Feminists, Lesbians, and Bad Girls|location=New York, N.Y.|publisher={{w|Routledge}}|year=1997|page=196|isbn=978-0-415-91874-9|passage=We only appear '''straight''' for the first five seconds. Just walking down the street, in the diner, or at the boardwalk, we hear, "Is she a man? Is she a woman? If she is a '''straight''' woman, what is she doing with this gay man?" We check in with each other. "What do you think, is it okay? I think we should go. I think we should cross over to the other side. Danger."}}
+#* {{quote-book|author=Helen Boyd|title=My Husband Betty: Love, Sex, and Life with a Crossdresser|location=New York, N.Y.|publisher=[[w:Perseus Books Group|Thunder's Mouth Press]]|year=2003|page=187|isbn=978-1-56025-515-4|passage=["]{{...}}He's a '''straight''' guy who does drag." At that, the man laughed. "Oh, you're putting me on!" He decided I must have been pulling his leg the whole time. He glanced back at my husband again. "So what's his number?" "The same as mine."}}
+#* '''2007''', Layla Kumari, ''{{w|The Guardian}}'', 17 September:
+#*: Some of my friends – gay and '''straight''' – seem unable to understand the close but platonic nature of my and Gian's relationship, but have been supportive.
+#* '''2011''', Jodi Picoult, ''Sing You Home'', p.273:
+#*: Angela smiles. ‘I'm '''straight''', Zoe, and I'm happily married.’
+#* {{quote-book|author=Wheeler Winston Dixon|authorlink=Wheeler Winston Dixon|title=Straight: Constructions of Heterosexuality in the Cinema|location=Albany, N.Y.|publisher={{w|State University of New York Press}}|year=2012|page=1|isbn=978-0-7914-8733-4|passage=Every other mode of social discourse is "other," whether it be termed ''gay'' (or the newly acceptable ''queer''), ''bisexual'', or ''asexual'', or embodied in the concept of the ''spinster'', the ''confirmed bachelor'', the ''old maid'', or the ''same-sex couple'' who will never fit into the "'''straight'''" world, and doesn't or don't want to. The state of nonstraightness is essentially suspect; it is not seen as "right [or] correct."}}
+#* {{quote-book|author=Katie Price|authorlink=Katie Price|title=He's the One|location=London|publisher=[[w:Random House|Century]]|year=2013|page=233|isbn=978-1-84605-959-9|passage=Why did he have to be '''straight'''? It's my tragedy. When we went camping with the school, we shared a tent. I was hoping for a ''{{w|Brokeback Mountain}}'' moment. I mean, I know he's straight, but there's always hope.}}
 # {{label|en|science|mathematics}} concerning the property allowing the [[parallel-transport]] of [[vector]]s along a course that keeps [[tangent]] vectors remain tangent vectors throughout that course {{gloss|a course which is straight, a [[straight curve]], is a [[geodesic]]}}
 
 ====Usage notes====
