--- a/en/想/想.15624.wikitext
+++ b/en/想/想.15624.wikitext
@@ -25,7 +25,7 @@ From {{och-l|相|to observe; appearance}} (“appearance > to visualise > to thi
 |m=xiǎng
 |c=soeng2
 |h=pfs=sióng
-|md=suōng
+|md=siōng
 |mn=xm,tp,kh,sx,yl,km,mg,hc,tc:siūⁿ/qz,lk,ph:siǔⁿ/zz,tn,md:siōⁿ/qz,tw,xm:sióng/zz:siáng
 |mn_note=siūⁿ/siǔⁿ/siōⁿ - vernacular; sióng/siáng - literary
 |mn-t=siên6/sion6/siang2
@@ -79,7 +79,7 @@ From {{och-l|相|to observe; appearance}} (“appearance > to visualise > to thi
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=상|eumhun=|rv=sang|mr=sang|y=sang}}
+{{ko-hanja|hangeul=상}}
 
 # {{defn|lang=ko|sort=心09}}
 
