--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -165,7 +165,7 @@ From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, al
 * Japanese: {{t+|ja|話す|tr=はなす, hanasu}}, {{t|ja|語る|tr=かたる, kataru}}, {{t+|ja|言う|tr=[[いう]], iu}}, {{t+|ja|しゃべる|tr=shaberu}}
 * Kannada: {{t+|kn|ಎನ್|sc=Knda}}, {{t+|kn|ಎನು|sc=Knda}}, {{t+|kn|ಮಾತಾಡು|sc=Knda}}, {{t+|kn|ಮಾತನಾಡು|sc=Knda}}
 * Kazakh: {{t+|kk|айту|sc=Cyrl}}, {{t+|kk|сөйлеу|sc=Cyrl}}, {{t+|kk|сөйлесу|sc=Cyrl}}
-* Khmer: {{t+|km|និយាយ|tr=niʔyiey|sc=Khmr}}
+* Khmer: {{t+|km|និយាយ}}
 * Korean: {{t+|ko|말하다}}, {{t+|ko|말씀하다}} {{qualifier|honorific}}
 * Kyrgyz: {{t+|ky|айтуу|sc=Cyrl}}, {{t+|ky|сүйлөө|sc=Cyrl}}
 * Ladin: {{t|lld|rujné}}
