--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -20,7 +20,7 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 
 # {{lb|en|intransitive}} To [[contend]] in physical conflict, either singly or in war, battle etc.
 #: {{ux|en|A wounded animal will '''fight''' like a maniac, relentless, savage and murderous.}}
-# {{lb|sv|reciprocal}} To [[contend]] in physical conflict with each other, either singly or in war, battle etc.
+# {{lb|en|reciprocal}} To [[contend]] in physical conflict with each other, either singly or in war, battle etc.
 #: {{ux|en|The two boxers have been '''fighting''' for more than half an hour.}}
 # {{lb|en|intransitive}} To [[strive]] for; to campaign or [[contend]] for success.
 #: {{ux|en|He '''fought''' for the Democrats in the last election.}}
