--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -135,6 +135,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * German: {{t+|de|spielen}}
 *: Alemannic German: {{t|gsw|schpile}}
 * Greek: {{t+|el|παίζω}}
+*: Ancient: {{t|grc|ἀθύρω}}
 * Greenlandic: {{t|kl|pinnguarpoq}}
 * Hebrew: {{t+|he|שיחק|tr=sikhék|alt=שִׂחֵק / שיחק}}, {{t|he|השתעשע|tr=hishta'ashéa}}
 * Hindi: {{t+|hi|खेलना|sc=Deva}}
