--- a/en/显/显.16999.wikitext
+++ b/en/显/显.16999.wikitext
@@ -4,7 +4,7 @@
 {{Han simplified forms|顯|顕|显}}
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=ATC|ids=⿱日 lol your mum sucks业}}
+{{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=ATC|ids=⿱日业}}
 
 ====References====
 * {{Han ref|kx=0494.181|hdz=21499.100|uh=663E|ud=26174}}
