--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -13,7 +13,7 @@ Borrowed from {{bor|en|sh|Jugoslavija}}, in turn from {{m|sh|jug|jugo|south}} an
 ===Proper noun===
 {{en-proper noun}}
 
-# {{senseid|en|Q36704}}A former country on the [[Balkan Peninsula]], made up of the now-independent nations of [[Bosnia and Herzegovina]], [[Croatia]], [[Macedonia]], [[Montenegro]], [[Serbia]], and [[Slovenia]]; it disintegrated in the 1990s.
+# {{senseid|en|Q36704}}A former country on the [[Balkan Peninsula]], made up of the now-independent nations of [[Bosnia and Herzegovina]], [[Croatia]], [[Macedonia]], [[Montenegro]], [[Serbia]], [[Kosovo]]and [[Slovenia]]; it disintegrated in the 1990s.
 
 ====Derived terms====
 * {{l|en|Yugosphere}}
