--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -366,3 +366,4 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 [[Category:English basic words]]
 [[Category:English ergative verbs]]
 [[Category:en:Liquids]]
+[[Category:en:Dances]]
