--- a/en/倴/倴.11069.wikitext
+++ b/en/倴/倴.11069.wikitext
@@ -4,10 +4,36 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=OKJT|ids=⿰亻奔}}
 
-# {{defn|Han|sort=人08}}
-
 ====References====
 * {{Han ref|kx=0109.160|dkj=00806|dj=0232.140|hdz=10172.100|uh=5034|ud=20532}}
+
+----
+
+==Chinese==
+{{zh-forms}}
+
+===Pronunciation 1===
+{{zh-pron
+|m=bēn
+|cat=
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{†}} {{zh-alt-form|奔}}
+
+===Pronunciation 2===
+{{zh-pron
+|m=bèn
+|cat=
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{†}} {{zh-alt-form|笨}}
+# {{zh-only|倴城}}
 
 ----
 
@@ -29,12 +55,3 @@
 {{ko-hanja|hangeul=분|rv=bun|mr=pun}}
 
 # {{defn|lang=ko|sort=人08}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[bèn]] ([[ben4]])|wg=pen<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=人08}}
