--- a/en/倬/倬.11050.wikitext
+++ b/en/倬/倬.11050.wikitext
@@ -30,7 +30,9 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# {{lb|zh|literary}} [[large]]; [[grand]]
+#* {{zh-x|倬 彼 雲漢、昭回 于 天。|'''Bright''' was that milky way,<br>Shining and revolving in the sky.|ref=Shijing}}
+# {{†}} [[attractive]]; [[charming]]
 
 ===References===
 * {{R:yue:mfccd}}
