--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -85,7 +85,7 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 * Latin: {{t|la|fluito}}
 {{trans-mid}}
 * Lithuanian: {{t|lt|plūduriuoti|impf}}, {{t+|lt|plaukti|impf}}
-* Maori: {{t|mi|mānu}}, {{t|mi|pōrena}} {{qualifier|as oil on water}}
+* Maori: {{t|mi|mānu}}, {{t|mi|pōrena}} {{qualifier|as oil on water}}, {{t|mi|kōrewarewa}}
 * Norman: {{t|nrf|fliotter}}
 * Portuguese: {{t+|pt|boiar}}, {{t+|pt|flutuar}}
 * Quechua: {{t|qu|tuytuy}}, {{t|qu|wamp'uy}}
