--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -6,7 +6,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 
 ====Pronunciation====
 * {{enPR|po͝osh}}, {{IPA|/pʊʃ/|lang=en}}
-* {{a|Appalachian}} {{IPA|[puʃ]|lang=en}}<ref>Prandes, Paul D., and Jeutonne Brewer. 1977. ''Dialect clash in America: Issues and answers.'' Metuchen, NJ: Scarecrow Press.</ref>
+* {{a|Appalachian}} {{IPA|[puʃ]|lang=en}}<ref>Brandes, Paul D., and Jeutonne Brewer. 1977. ''Dialect clash in America: Issues and answers.'' Metuchen, NJ: Scarecrow Press.</ref>
 * {{audio|en-us-push.ogg|Audio (US)|lang=en}} {{IPA|[pʷʊʃ]|lang=en}}
 * {{rhymes|ʊʃ|lang=en}}
 
