--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -16,7 +16,7 @@
 
 ===Glyph origin===
 {{Han etym}}
-Semantic 心 + phonetic 亞
+{{Han compound|亞|心|ls=psc|c1=p|c2=s|t2=heart}}.
 
 ===Pronunciation 1===
 {{zh-pron
