/* Chinese */ split by mc, "obedient" seems to be from Shuowen “倭，順皃” <倭#49111345>

--- a/en/倭/倭.11052.wikitext
+++ b/en/倭/倭.11052.wikitext
@@ -16,37 +16,63 @@
 ===Glyph origin===
 {{Han etym}}
 
-===Pronunciation===
+===Pronunciation 1===
 {{zh-pron
 |m=wō
-|c=wai1,wai2,wo2,wo1
+|c=wo1
 |h=pfs=
 |md=
 |mn=e
 |w=2u
 |ma=Zh-wo.ogg
-|mc=y
-|oc=y
+|mc=2
+|oc=1
 |cat=n,a,pn
 }}
 
-===Definitions===
+====Definitions====
 {{zh-hanzi}}
 
 # [[dwarf]]
-# {{lb|zh|archaic}} describes a hairstyle for women that was popular during the [[w:Han Dynasty|Han Dynasty]] in which the hair was gathered up in a lopsided bun.
 # {{lb|zh|historical|now|pejorative}} [[Japan]]; [[Yamato]]
 # {{lb|zh|historical|now|pejorative}} [[Japanese]]
 # [[dwarfish]], [[short]]
-# {{lb|zh|archaic}} [[obedient]]
-# {{lb|zh|archaic}} [[winding]]; [[meandering]]
 
 ====See also====
 * {{zh-l|大和}}
 * {{zh-l|日本}}
 
 ===Compounds===
-{{zh-der|倭刀|倭墮髻|倭子|倭寇|倭瓜|倭遲|老倭瓜}}
+{{zh-der|倭刀|倭子|倭寇|倭瓜|倭遲|老倭瓜}}
+
+===Pronunciation 2===
+{{zh-pron
+|m=wēi
+|c=wai1,wai2
+|mc=1
+|oc=3
+|cat=
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{rfv-sense|zh}} {{lb|zh|archaic}} [[obedient]]
+# {{zh-only|倭遲|dot=,}} {{zh-alt-form|逶迤|[[winding]]; [[meandering]]|nocap=y}}
+
+===Pronunciation 3===
+{{zh-pron
+|m=wǒ
+|c=wo2
+|mc=3
+|oc=2
+|cat=
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{zh-only|倭墮髻|a hairstyle for women that was popular during the {{w|Han Dynasty}} in which the hair was gathered up in a lopsided bun}}
 
 ----
 
