--- a/en/想/想.15624.wikitext
+++ b/en/想/想.15624.wikitext
@@ -26,7 +26,7 @@ From {{och-l|相|to observe; appearance}} (“appearance > to visualise > to thi
 |c=soeng2
 |h=pfs=sióng
 |md=siōng
-|mn=xm,tp,kh,sx,yl,km,mg,hc,tc:siūⁿ/qz,lk,ph:siǔⁿ/zz,tn,md:siōⁿ/qz,tw,xm:sióng/zz:siáng
+|mn=xm,tp,kh,sx,yl,km,mg,hc,tc:siūⁿ/qz,lk,ph:siǔⁿ/zz,tn,md:siōⁿ/pn:siāuⁿ/qz,tw,xm:sióng/zz:siáng
 |mn_note=siūⁿ/siǔⁿ/siōⁿ - vernacular; sióng/siáng - literary
 |mn-t=siên6/sion6/siang2
 |mn-t_note=siên6/sion6 - vernacular; siang2 - literary
