--- a/en/昻/昻.16996.wikitext
+++ b/en/昻/昻.16996.wikitext
@@ -13,25 +13,7 @@
 ----
 
 ==Chinese==
-{{zh-forms}}
-
-===Pronunciation===
-{{zh-pron
-|m=áng
-|c=ngong4,ong4
-|mc=
-|oc=
-|ma=
-|cat=v
-}}
-
-===Definitions===
-{{zh-hanzi}}
-
-# {{rfdef|lang=zh}}
-
-====References====
-* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
+{{zh-see|昂|v}}
 
 ----
 
