--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -115,6 +115,7 @@
 {{trans-mid}}
 * Latvian: {{t|lv|svārki|m-p}}
 * Lithuanian: {{t|lt|sijonas|m}}
+* Lojban: {{t|jbo|skaci}}
 * Luxembourgish: {{t|lb|Jupe|f}}
 * Macedonian: {{t|mk|здолниште|n}}, {{t|mk|здолница|f}}, {{t|mk|сукња|f}} {{qualifier|colloquial}}
 * Maltese: {{t|mt|dublett|m}}
