--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -110,7 +110,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Chinese:
 *: Cantonese: {{t|yue|搵到|sc=Hani}}, {{t|yue|揾到|tr=wan2 dou2|sc=Hani}}
 *: Mandarin: {{t+|cmn|找到|tr=zhǎodào|sc=Hani}}
-*: Min Nan: {{t+|nan|揣|tr=tshuē/tshē, chhoē/chhē|sc=Hani}}
+*: Min Nan: {{t+|nan|揣|tr=tshuē, tshē, chhoē, chhē|sc=Hani}}
 * Cimbrian: {{t|cim|bènnan}}
 * Crimean Tatar: {{t|crh|tapmaq}}
 * Czech: {{t+|cs|nalézat|impf}}, {{t+|cs|nalézt|pf}}, {{t+|cs|nacházet|impf}}, {{t+|cs|najít|pf}}
