--- a/en/偠/偠.11120.wikitext
+++ b/en/偠/偠.11120.wikitext
@@ -11,12 +11,33 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[jiu5]]|y=yiu5}}
+===Pronunciation===
+{{zh-pron
+|m=yǎo
+|m-s=
+|dg=
+|c=jiu2,jiu5
+|c-t=
+|g=
+|h=pfs=
+|j=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|cat=n
+}}
 
-# {{defn|lang=yue|sort=人09}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -38,12 +59,3 @@
 {{ko-hanja|hangeul=요|rv=yo|mr=yo}}
 
 # {{defn|lang=ko|sort=人09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[yǎo]] ([[yao3]])|wg=yao<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
