t+km:[[ឧស្សវៈ]] t+km:[[ល្ខោន]] t+th:[[ละคร]] t+lo:[[ລະຄອນ]] t-balance t+uk:[[п'єса]] t+uk:[[спектакль]] t+be:[[п'еса]] t+be:[[спектакль]] ([[WT:EDIT|Assisted]]) <play#49135849>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -582,6 +582,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * American Sign Language: {{t|ase|A@Left1Chesthigh-A@Right1Chesthigh Upanddown}}
 * Arabic: {{t|ar|مَسْرَح|m}}, {{t|ar|مَسْرَحِيَّة|f}}
 * Armenian: {{t+|hy|ներկայացում}}
+* Belarusian: {{t|be|п'е́са|f}}, {{t|be|спекта́кль|m}}
 * Catalan: {{t+|ca|obra|f}}
 * Chinese:
 *: Mandarin: {{t+|cmn|戲劇|sc=Hani}}, {{t+|cmn|戏剧|tr=xìjù|sc=Hani}}, {{t+|cmn|話劇|sc=Hani}}, {{t+|cmn|话剧|tr=huàjù|sc=Hani}}
@@ -602,9 +603,11 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * Irish: {{t|ga|dráma|m}}
 * Italian: {{t+|it|dramma|m}}
 * Japanese: {{t+|ja|演劇|tr=えんげき, engeki|sc=Jpan}}, {{t|ja|戯曲|tr=ぎきょく, gikyoku|sc=Jpan}}
+* Khmer: {{t+|km|ឧស្សវៈ}}, {{t+|km|ល្ខោន}}
 * Korean: {{t+|ko|연극}}, {{t+|ko|희곡}}
-{{trans-mid}}
 * Kurdish: {{t+|ku|şano|f}}, {{t+|ku|piyes|f}}, {{t+|ku|tiyatro|f}}
+{{trans-mid}}
+* Lao: {{t|lo|ລະຄອນ}}
 * Latin: {{t+|la|fabula|f}}
 * Macedonian: {{t|mk|представа|f}}
 * Malayalam: {{t+|ml|നാടകം}}
@@ -625,7 +628,9 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * Swedish: {{t+|sv|pjäs|c}}, {{t+|sv|skådespel|n}}, {{t+|sv|teaterpjäs|c}}, {{t|sv|teaterstycke|n}}, {{t+|sv|drama|n}}
 * Tagalog: {{t+|tl|dula}}
 * Telugu: {{t+|te|నాటకం}}
+* Thai: {{t+|th|ละคร}}
 * Turkish: {{t+|tr|oyun}}, {{t|tr|tiyatro oyunu}}
+* Ukrainian: {{t+|uk|п'є́са|f}}, {{t|uk|спекта́кль|m}}
 * Welsh: {{t+|cy|drama|f}}
 * Yiddish: {{t|yi|פּיעסע|f}}
 {{trans-bottom}}
