--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -5,9 +5,9 @@
 From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortine}}, from {{etyl|fro|en}} {{m|fro|cortine}}, from {{etyl|ML.|en}} {{m|la|cōrtīna||curtain}}, from {{etyl|la|en}} {{m|la|cohors||court, enclosure}}.
 
 ===Pronunciation===
-* {{a|UK}} {{IPA|/ˈkɜːtn̩/|lang=en}}
+* {{a|RP}} {{IPA|/ˈkɜːtn̩/|lang=en}}
 ** {{audio|En-uk-curtain.ogg|Audio (UK)|lang=en}}
-* {{a|US}} {{IPA|/ˈkɝtn̩/|/ˈkɜɹtən/|[ˈkɝtɂn̩]|[ˈkɝʔn̩]|lang=en}}
+* {{a|GA}} {{IPA|/ˈkɝtn̩/|[ˈkɝʔn̩]|lang=en}}
 ** {{audio|En-us-curtain.ogg|Audio (US)|lang=en}}
 * {{rhymes|ɜː(r)tən|lang=en}}
 
