--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -44,7 +44,8 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 # [[direct|Direct]] in communication; [[unevasive]], [[straightforward]]. {{defdate|from 19<sup>th</sup>c.}}
 #* '''2003''', Rosie Cowan, ''{{w|The Guardian}}'', 24 April:
 #*: Tony Blair issued a direct challenge to the IRA yesterday when he demanded they give '''straight''' answers to three simple questions{{nb...}}.
-# In a row, in unbroken [[sequence]]. {{defdate|from 19<sup>th</sup>c.}}
+# In a row, in unbroken [[sequence]]; consecutive. {{defdate|from 19<sup>th</sup>c.}}
+#: ''After four '''straight''' wins, Mudchester United are top of the league.''
 #* {{quote-journal|date=September 24, 2011|author=David Ornstein|work=BBC Sport
 |title=[http://news.bbc.co.uk/sport2/hi/football/14958156.stm Arsenal 3-0 Bolton]
 |passage=It moves them from 17th to 12th on seven points, while Bolton are now bottom of the table with five '''straight''' defeats.}}
