--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -24,17 +24,17 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 #*: “Heavens!” exclaimed Nina, “the blue-stocking and the fogy!—and yours ''are'' pale blue, Eileen!—you’re about as self-conscious as Drina—slumping there with your hair tumbling ''à la'' Mérode! Oh, it's very picturesque, of course, but a '''straight''' spine and good grooming is better.{{nb...}}”
 #* '''2011''', Adharanand Finn, ''{{w|The Guardian}}'', 22 March:
 #*: The other people, I presume, are supposed to be standing to attention, but they're all smiling at me. The lines are not even '''straight'''.
-## Of a path, trajectory, ''etc.'': [[direct]], [[undeviating]]. {{defdate|from 15<sup>th</sup>c.}}
-##* '''1913''', {{w|John Fox, Jr.}}, ''The Kentuckians'', page 185:
-##*: Now, as the world knows, the '''straightest''' way to the heart of the honest voter is through the women of the land, and the '''straightest''' way to the heart of the women is through the children of the land; and one method of winning both, with rural politicians, is to kiss the babies wide and far.
-##* '''2000''', Allan Wood, ''Babe Ruth and the 1918 Red Sox'', page 293:
-##*: He had no time to set himself, but his throw was '''straight''' and true. Pick slid in, spikes high, and Schang tagged him in the ribs a foot or two from the plate.
-##* {{quote-magazine|date=2013-06-29|volume=407|issue=8842|page=55|magazine={{w|The Economist}}
+# Of a path, trajectory, ''etc.'': [[direct]], [[undeviating]]. {{defdate|from 15<sup>th</sup>c.}}
+#* '''1913''', {{w|John Fox, Jr.}}, ''The Kentuckians'', page 185:
+#*: Now, as the world knows, the '''straightest''' way to the heart of the honest voter is through the women of the land, and the '''straightest''' way to the heart of the women is through the children of the land; and one method of winning both, with rural politicians, is to kiss the babies wide and far.
+#* '''2000''', Allan Wood, ''Babe Ruth and the 1918 Red Sox'', page 293:
+#*: He had no time to set himself, but his throw was '''straight''' and true. Pick slid in, spikes high, and Schang tagged him in the ribs a foot or two from the plate.
+#* {{quote-magazine|date=2013-06-29|volume=407|issue=8842|page=55|magazine={{w|The Economist}}
 |title=Travels and travails|url=http://www.economist.com/news/international/21580191-edward-snowdens-odyssey-leaves-america-nonplussed-and-its-allies-dismayed-russia-china|passage=Even without hovering drones, a lurking assassin, a thumping score and a denouement, the real-life story of Edward Snowden, a rogue spy on the run, could be '''straight''' out of the cinema. But, as with Hollywood, the subplots and exotic locations may distract from the real message: America’s discomfort and its foes’ glee.}}
-## Perfectly [[horizontal]] or [[vertical]]; not diagonal or oblique. {{defdate|from 17<sup>th</sup>c.}}
-##* '''2004''', Chris Weston, ''500 Digital Photography Hints, Tips, and Techniques'':
-##*: There's nothing more annoying than taking a great picture, only to find that the horizon isn't '''straight'''.
-## {{lb|en|obsolete}} [[stretched|Stretched]] out; fully [[extended]]. {{defdate|15<sup>th</sup>-16<sup>th</sup>c.}}
+# Perfectly [[horizontal]] or [[vertical]]; not diagonal or oblique. {{defdate|from 17<sup>th</sup>c.}}
+#* '''2004''', Chris Weston, ''500 Digital Photography Hints, Tips, and Techniques'':
+#*: There's nothing more annoying than taking a great picture, only to find that the horizon isn't '''straight'''.
+# {{lb|en|obsolete}} [[stretched|Stretched]] out; fully [[extended]]. {{defdate|15<sup>th</sup>-16<sup>th</sup>c.}}
 # {{lb|en|obsolete|rare}} [[strait|Strait]]; [[narrow]].
 #* Sir {{w|John Mandeville}} (c.1350)
 #*: Egypt is a long country, but it is '''straight''', that is to say, narrow.
