--- a/en/偕/偕.11109.wikitext
+++ b/en/偕/偕.11109.wikitext
@@ -21,16 +21,26 @@
 ===Pronunciation===
 {{zh-pron
 |m=xié,jiē
+|m_note=jiē - obsolete in Mainland, variant in Taiwan
 |c=gaai1,haai4
 |mc=y
 |oc=y
-|cat=
+|cat=v,adv,adj
 }}
 
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# to [[accompany]]; [[together]]; in [[company]]
+#: {{zh-x|偕同|along with}}
+#: {{zh-x|偕行|to travel '''together'''}}
+#: {{zh-x|偕老|to live '''together''' to a ripe old age [used in blessing newly-weds]}}
+# {{†}} [[strong]]
+#* {{zh-x|偕偕 士子、朝{zhāo}夕 從事。|An officer, '''strong and vigorous''',<br>Morning and evening I am engaged in service.|ref=Shijing}}
+# {{†}} to [[unify]]
+# {{†}} to be in [[harmony]] (with)
+# {{†}} {{rfdef|zh}} <!-- 比、並 -->
+# {{†}} {{zh-alt-form|皆|[[all]]}}
 
 ====Compounds====
 {{zh-der|偕偕|偕同|偕老|偕行|君子偕老|期頤偕老|白頭偕老|百年偕老|相偕|與民偕樂|計偕}}
