--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -414,6 +414,7 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 * Polish: {{t+|pl|strit|m}}
 * Portuguese: {{t|pt|straight|m}}
 * Russian: {{t+|ru|стрейт|m}}, {{t+|ru|стрит|m}}
+* Spanish: {{t+|es|escalera}}
 * Swedish: {{t+|sv|stege|c}}
 {{trans-bottom}}
 
