--- a/en/偈/偈.11096.wikitext
+++ b/en/偈/偈.11096.wikitext
@@ -21,7 +21,6 @@
 {{Han etym}}
 
 ===Etymology 1===
-
 ====Pronunciation====
 {{zh-pron
 |m=jì
@@ -40,7 +39,7 @@
 # {{lb|zh|Cantonese}} [[talk]]; [[chat]]; [[conversation]]
 
 ====Compounds====
-{{zh-der|偈偈|偈子|偈言|偈頌|傾偈|傾閒偈|閒偈|話事偈|佛偈|啱偈|密偈}}
+{{zh-der|偈子|偈言|偈頌|傾偈|傾閒偈|閒偈|話事偈|佛偈|啱偈|密偈}}
 
 ===Etymology 2===
 ====Pronunciation====
@@ -55,8 +54,8 @@
 ====Definitions====
 {{zh-hanzi}}
 
-# [[fast]]
-# [[brave]]
+# {{lb|zh|literary}} [[fast]]
+# {{lb|zh|literary}} [[brave]]
 
 ===Etymology 3===
 Borrowed from {{bor|yue|en|gear}}.
@@ -75,6 +74,30 @@ Borrowed from {{bor|yue|en|gear}}.
 
 ====Compounds====
 {{zh-der|偈油|爆偈}}
+
+===Etymology 4===
+====Pronunciation====
+{{zh-pron
+|m=jié
+|cat=a
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{zh-only|偈偈}}
+
+===Etymology 5===
+====Pronunciation====
+{{zh-pron
+|m=qì
+|cat=a
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{†}} {{zh-alt-form|憩|to [[rest]]}}
 
 ===References===
 * {{R:yue:Hanzi}}
