t+ar:[[قص]] tgloss:"computing: to remove and place in memory" t+ar:[[يقص]] ([[WT:EDIT|Assisted]]) <cut#49159345>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -640,7 +640,8 @@ From {{inh|en|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|enm|ketten|t
 * Swedish: {{t+|sv|utesluta}} {{q|from a team}}, {{t|sv|klippa bort}} {{q|remove a portion during editing of a tape}}
 {{trans-bottom}}
 
-{{trans-top|to remove and place in memory}}
+{{trans-top|computing: to remove and place in memory}}
+* Arabic: {{t|ar|قَصَّ|pf}}, {{t|ar|يَقُصُّ|impf}}
 * Catalan: {{t+|ca|retallar}}
 * Dutch: {{t+|nl|knippen}}
 * Greek: {{t+|el|αποκοπή|f}}
