--- a/en/偲/偲.11138.wikitext
+++ b/en/偲/偲.11138.wikitext
@@ -12,15 +12,33 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=si1|y=si1}}
+===Pronunciation===
+{{zh-pron
+|m=sī
+|m-s=
+|dg=
+|c=soi1,si1,caai1
+|c-t=
+|g=
+|h=pfs=
+|j=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|cat=n
+}}
 
-# {{defn|lang=yue|sort=人09}}
+===Definitions===
+{{zh-hanzi}}
 
-====Derived terms====
-{{zh-der|偲偲}}
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -46,12 +64,3 @@
 {{ko-hanja|hangeul=시|rv=si|mr=si}}
 
 # {{defn|lang=ko|sort=人09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[sī]] ([[si1]])|wg=ssu<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
