--- a/en/偲/偲.11138.wikitext
+++ b/en/偲/偲.11138.wikitext
@@ -15,30 +15,47 @@
 ==Chinese==
 {{zh-forms}}
 
-===Pronunciation===
+===Pronunciation 1===
 {{zh-pron
-|m=sī
-|m-s=
-|dg=
-|c=soi1,si1,caai1
-|c-t=
-|g=
-|h=pfs=
-|j=
-|md=
-|mn=
-|mn-t=
-|w=
-|x=
-|mc=y
-|oc=y
-|cat=n
+|m=cāi
+|c=caai1,soi1
+|mc=2
+|oc=1
+|cat=
 }}
 
-===Definitions===
+====Definitions====
 {{zh-hanzi}}
 
-# {{rfdef|lang=zh}}
+# {{†}} [[able]]; [[talented]]
+
+===Pronunciation 2===
+{{zh-pron
+|m=sī
+|c=si1
+|mc=1
+|oc=2
+|cat=
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{zh-only|偲偲}}
+
+===Pronunciation 3===
+{{zh-pron
+|m=sǐ
+|cat=
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{†}} {{n-g|Alternative form of {{zh-l|*𤟧}}, defined as {{zh-l|*不安}} in ''{{w|Jiyun}}''.}}
+
+===References===
+* {{R:yue:Hanzi}}
 
 ----
 
