--- a/en/偳/偳.11139.wikitext
+++ b/en/偳/偳.11139.wikitext
@@ -12,12 +12,33 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[dyun1]]|y=dyun1}}
+===Pronunciation===
+{{zh-pron
+|m=duān
+|m-s=
+|dg=
+|c=zeoi3
+|c-t=
+|g=
+|h=pfs=
+|j=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|cat=n
+}}
 
-# {{defn|lang=yue|sort=人09}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -30,12 +51,3 @@
 
 ====Readings====
 * {{ja-readings|on=[[たん]] (tan)|kun=[[ちひさい]] (chihisai), [[すこし]] (sukoshi)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[duān]] ([[duan1]])|wg=tuan<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
