--- a/en/偛/偛.11115.wikitext
+++ b/en/偛/偛.11115.wikitext
@@ -9,6 +9,36 @@
 
 ----
 
+==Chinese==
+{{zh-forms}}
+
+===Pronunciation===
+{{zh-pron
+|m=chā
+|m-s=
+|dg=
+|c=zaap3
+|c-t=
+|g=
+|h=pfs=
+|j=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|cat=n
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -27,12 +57,3 @@
 {{ko-hanja|hangeul=삽|rv=sap|mr=sap}}
 
 # {{defn|lang=ko|sort=人09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[chā]] ([[cha1]])|wg=[[ch'a1|ch'a<sup>1</sup>]]}}
-
-# {{defn|lang=cmn|sort=人09}}
