--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -95,7 +95,7 @@ Other readings: tī - vernacular (may be considered literary, only used in {{zh-
 #: {{zh-x|很 快 地{de}|very quick'''ly'''}}
 #: {{zh-x|佢 偷偷 地{dei6-2} 走 咗 喇。|He secret'''ly''' left.|C}}
 #* {{zh-x|你 乖 乖 地{dei6-2} 坐 喺度 喇 吓。|Sit here and behave, ok?|C}}
-#: {{zh-alt-inline|的,底-obsolete}}
+#: {{zh-alt-inline|{{l|zh|的}}, {{l|zh|底}} ''obsolete''|c=1}}
 
 =====Usage notes=====
 * The use of this particle is always optional after polysyllabic adverbs.
