--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -103,7 +103,7 @@ Other readings: tī - vernacular (may be considered literary, only used in {{zh-
 *: {{zh-x|非常 地{de} 短|very short}}
 * On the contrary, monosyllabic adverbs are compulsorily used with or without {{lang|zh|地}}.
 *: {{zh-x|很 漂亮{liang}|very beautiful}} (where *{{lang|zh|很地漂亮}} is unacceptable)
-*: {{zh-x|倏 地{de} 不見|to disappear suddenly}} (where *{{lang|zh|倏不見}} is unacceptable)
+*: {{zh-x|倏 地{de} 不見|to disappear suddenly}} (where *{{lang|zh|倏不見}} is unacceptable in Modern Standard Chinese)
 
 ====Compounds====
 {{zh-der|fold=1|忙不迭地|仆地|怎地|呆呆地|嚭嚭地|沒地|撇地|沒地里|沒揣地|撲搭地}}
