--- a/en/旳/旳.16923.wikitext
+++ b/en/旳/旳.16923.wikitext
@@ -14,6 +14,8 @@
 
 ===Glyph origin===
 {{Han etym}}
+
+===Definitions===
 {{zh-see|的|v|[[clear]]; [[red]] [[dot]] worn on the [[face]] by [[women]]}}
 
 ===References===
