--- a/en/旳/旳.16923.wikitext
+++ b/en/旳/旳.16923.wikitext
@@ -16,7 +16,7 @@
 {{Han etym}}
 
 ===Definitions===
-{{zh-see|的|v|[[clear]]; [[red]] [[dot]] worn on the [[face]] by [[women]]}}
+{{zh-see|的|a|[[clear]]; [[red]] [[dot]] worn on the [[face]] by [[women]]}}
 
 ===References===
 * {{R:twedu|B01521}}
