--- a/en/旼/旼.16932.wikitext
+++ b/en/旼/旼.16932.wikitext
@@ -4,19 +4,27 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=60040|canj=AYK,XAYK|ids=⿰日文}}
 
-# [[gentle]] and [[affable]]
-
 ====References====
 * {{Han ref|kx=0490.260|dkj=13776|dj=0851.250|hdz=21495.050|uh=65FC|ud=26108|bh=CCC5|bd=52421}}
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[man4]]|y=man4}}
+===Pronunciation===
+{{zh-pron
+|m=mín
+|c=man4
+|mc=y
+|oc=y
+}}
 
-# {{defn|lang=yue|sort=日04}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{zh-only|旼旼}}
+# {{zh-hg}} {{zh-alt-form|旻}}
 
 ----
 
@@ -27,12 +35,3 @@
 
 # [[gentle]] and [[affable]]
 # (as a name of a person) different form of [[旻]]; [[heaven]]
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[mín]] ([[min2]])|wg=min<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=日04}}
