--- a/en/偩/偩.11129.wikitext
+++ b/en/偩/偩.11129.wikitext
@@ -28,7 +28,7 @@
 {{zh-hanzi}}
 
 # {{†}} {{rfdef|zh}}
-#:*{{zh-x|禮樂 偩{fù} 天地 之 情|Ceremonies and music '''resemble''' the nature of Heaven and Earth.|ref=Liji}}
+#* {{zh-x|禮樂 偩{fù} 天地 之 情|Ceremonies and music '''resemble''' the nature of Heaven and Earth.|ref=Liji}}
 # {{†}} {{zh-alt-form|負|to [[rely]] on; to [[depend]] on}}
 
 ===References===
