--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -8,7 +8,7 @@
 * {{rhymes|iːl|lang=en}}
 
 ===Etymology 1===
-From {{etyl|enm|en}} {{m|enm|felen}}, from {{etyl|ang|en}} {{m|ang|fēlan||to feel, perceive, touch}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*fōlijaną||to taste, feel}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*pelem-}}, {{m|ine-pro|*pal-||to swing, shake}}. Cognate with {{cog|sco|fele||to feel}}, {{cog|fy|fiele||to sense, feel}}, {{cog|nl|voelen||to feel}}, {{cog|nds|fölen}}, {{m|nds|föhlen||to feel}}, {{cog|de|fühlen||to feel}}, {{cog|da|føle||to feel}}, and through Indo-European, with {{cog|la|palpō||touch, feel, caress, pat}}, {{cog|grc|πάλλω||swing, shake, shake loose}}.
+From {{inh|en|enm|felen}}, from {{inh|en|ang|fēlan|t=to feel, perceive, touch}}, from {{inh|en|gem-pro|*fōlijaną|t=to taste, feel}}, from {{der|en|ine-pro|*pelem-}}, {{m|ine-pro|*pal-|t=to swing, shake}}. Cognate with {{cog|sco|fele|t=to feel}}, {{cog|frr|feel|t=to feel}}, {{cog|fy|fiele|t=to sense, feel}}, {{cog|nl|voelen|t=to feel}}, {{cog|nds|fölen}}, {{m|nds|föhlen|t=to feel}}, {{cog|de|fühlen|t=to feel}}, {{cog|da|føle|t=to feel}}, and through Indo-European, with {{cog|la|palpō|t=touch, feel, caress, pat}}, {{cog|grc|πάλλω|t=swing, shake, shake loose}}.
 
 ====Verb====
 {{en-verb|feels|feeling|felt}}
