--- a/en/傈/傈.11160.wikitext
+++ b/en/傈/傈.11160.wikitext
@@ -4,10 +4,39 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=|canj=OMWD|ids=⿰亻栗}}
 
-# [[tribe]]
-
 ====References====
 * {{Han ref|kx=0112.220|dkj=00942|hdz=10202.010|uh=5088|ud=20616}}
+
+----
+
+==Chinese==
+{{zh-forms}}
+
+===Pronunciation===
+{{zh-pron
+|m=lì
+|m-s=
+|dg=
+|c=
+|c-t=
+|g=
+|h=pfs=
+|j=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|cat=n
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{†}} {{lb|zh|historical}} [[wood]] used to make [[ancestral]] [[tablet]]s
+# {{zh-only|傈僳族|[[Lisu]] people}}
 
 ----
 
@@ -20,12 +49,3 @@
 
 ====Readings====
 * {{ja-readings|on=[[りつ]] (ritsu), [[りち]] (richi)|kun=}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[lì]] ([[li4]])|wg=li<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=人10}}
