--- a/en/傉/傉.11161.wikitext
+++ b/en/傉/傉.11161.wikitext
@@ -9,9 +9,33 @@
 
 ----
 
-==Mandarin==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{cmn-hanzi|pin=[[rù]] ([[ru4]])|wg=ju<sup>4</sup>}}
+===Pronunciation===
+{{zh-pron
+|m=nù
+|m-s=
+|dg=
+|c=
+|c-t=
+|g=
+|h=pfs=
+|j=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|cat=pn
+}}
 
-# {{defn|lang=cmn|sort=人10}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{n-g|Only used in proper names.}}
+
+===Compounds===
+{{zh-der|庫傉官|傉薩|秃髪傅檀}}
