/* Pronunciation */ seems to be most common in Tainan (https://www.facebook.com/khoguan/posts/1790281267696560) <偏#49189976>

--- a/en/偏/偏.11103.wikitext
+++ b/en/偏/偏.11103.wikitext
@@ -22,7 +22,7 @@
 |c=pin1
 |h=pfs=phiên
 |md=piĕng
-|mn=phian/phiⁿ/twvk:pheⁿ
+|mn=phian/phiⁿ/tn:pheⁿ
 |mn_note=phian - literary; phiⁿ/pheⁿ - vernacular
 |w=1phi
 |mc=y
