/* Chinese */ improve the definitions according to Hanyu Da Zidian <傒#49191553>

--- a/en/傒/傒.11172.wikitext
+++ b/en/傒/傒.11172.wikitext
@@ -25,17 +25,17 @@
 ====Definitions====
 {{zh-hanzi}}
 
-# an ancient ethnic group in China
-# people from Jiangxi
-# {{zh-alt-form|徯}}
-# {{zh-alt-form|蹊}}
+# {{lb|zh|historical}} an ancient ethnic group in China
+# {{lb|zh|obsolete}} people from [[Jiangxi]]
+# {{†}} {{zh-alt-form|徯|to [[wait]]}}
+# {{†}} {{zh-alt-form|蹊|tr=xī|[[footpath]]}}
 # {{surname|lang=zh}}
 
 ====Usage notes====
 In the third sense, the Han character 傒 is the 18th [[tetragram]] of the {{w|Taixuanjing}}.
 
 ===Etymology 2===
-{{zh-see|繫|v}}
+{{zh-see|繫|v|to [[arrest]]; to [[imprison]]}}
 ----
 
 ==Japanese==
