Reverted edits by [[Special:Contributions/69.63.174.130|69.63.174.130]]. If you think this rollback is in error, please leave a message on my talk page. <stomach#49193229>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -5,7 +5,8 @@
 ===Alternative forms===
 * {{l|en|stomack}}
 
-your stomac is the part that food gos and if you rip it open you find magic things and probably go to jail
+===Etymology===
+From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, from {{etyl|la|en}} {{m|la|stomachus}}, from {{etyl|grc|en}} {{m|grc|στόμαχος}}, from {{m|grc|στόμα||mouth}}. Displaced native [[Middle English]] {{m|enm|mawe||stomach, maw}} (from [[Old English]] {{m|ang|maga}}), [[Middle English]] {{m|ang|bouk|bouk, buc|belly, stomach}} (from [[Old English]] {{m|ang|buc||belly, stomach}}, see [[bucket]]).
 
 ===Pronunciation===
 * {{IPA|/ˈstʌmək/|lang=en}}
