--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -641,7 +641,7 @@ From {{inh|en|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|enm|ketten|t
 {{trans-bottom}}
 
 {{trans-top|computing: to remove and place in memory}}
-* Arabic: {{t|ar|قَصَّ|pf}}, {{t|ar|يَقُصُّ|impf}}
+* Arabic: {{t|ar|قَصَّ}}
 * Catalan: {{t+|ca|retallar}}
 * Dutch: {{t+|nl|knippen}}
 * Greek: {{t+|el|αποκοπή|f}}
