/* Translations */ Added Ancient Greek translation of this word. <tortoise#49194445>

--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -59,6 +59,7 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 * Georgian: {{t+|ka|კუ}}
 * German: {{qualifier|tortoise or turtle}} {{t+|de|Schildkröte|f}}, {{t|de|Landschildkröte|f}}
 * Greek: {{qualifier|tortoise or turtle}} {{t+|el|χελώνα|f}}
+*: Ancient Greek: {{qualifier|tortoise or turtle}} {{t|grc|χελώνη|f}}
 * Hebrew: {{qualifier|tortoise or turtle}} {{t+|he|צָב|m|tr=tzav|sc=Hebr}}
 * Hindi: {{t+|hi|कछुआ|m|sc=Deva}}
 * Hungarian: {{t+|hu|teknősbéka}}, {{t+|hu|teknős}}
