/* Chinese */ bēng: # {{zh-only|傍傍}} <傍#49195637>

--- a/en/傍/傍.11165.wikitext
+++ b/en/傍/傍.11165.wikitext
@@ -57,6 +57,16 @@
 ====Compounds====
 {{zh-der|傍薄|傍門外道|傍觀|傍通|傍偟|傍門|傍牌|傍尊|傍生|傍妻|傍邊|傍排|傍人|樿傍|珠玉在傍|道傍李|道傍苦李}}
 
+===Pronunciation 3===
+{{zh-pron
+|m=bēng
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{zh-only|傍傍}}
+
 ----
 
 ==Japanese==
