--- a/en/備/備.11180.wikitext
+++ b/en/備/備.11180.wikitext
@@ -49,8 +49,7 @@
 ===Kanji===
 {{ja-kanji|grade=5|rs=人10}}
 
-# {{defn|lang=ja|sort=人10}}
-
+# equip, provision
 ====Readings====
 {{ja-readings
 |goon=び
@@ -64,6 +63,9 @@
 * {{ja-r|備品|びひん|gloss=fixtures}}
 * {{ja-r|準備|じゅんび|gloss=preparation}}
 * {{ja-r|装備|そうび|gloss=equipment}}
+
+====Usage notes====
+The printed form of this character typically differs from its handwritten form, with the latter nearly matching the Traditional Chinese form.
 
 ----
 
