--- a/en/坂/坂.12997.wikitext
+++ b/en/坂/坂.12997.wikitext
@@ -2,11 +2,11 @@
 {{character info/new}}
 ==Translingual==
 
-===Glyph origin===
-{{Han compound|土|反|ls=psc|c1=s|c2=p}}.
-
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=GHE|ids=⿰土反}}
+
+====Derived characters====
+* {{l|mul|𭇸}}
 
 ====References====
 * {{Han ref|kx=0224.260|dkj=04910|dj=0459.140|hdz=10423.090|uh=5742|ud=22338}}
@@ -14,6 +14,12 @@
 ----
 
 ==Chinese==
+
+===Glyph origin===
+{{Han etym}}
+{{Han compound|土|反|ls=psc|c1=s|c2=p}}.
+
+===Definitions===
 {{zh-see|阪|sv}}
 
 ----
