--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -501,7 +501,9 @@ From {{inh|en|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|enm|ketten|t
 * Arabic: {{t+|ar|جَرَحَ}}
 * Armenian: {{t+|hy|կտրել}}
 * Aromanian: {{t|rup|talju}}, {{t|rup|talj}}
-* Assamese: {{t|as|কটা}}, {{t|as|কাটা}}
+* Assamese: 
+*: Eastern: {{t|as|কটা}}
+*: Central: {{t|as|কাটা}}
 * Belarusian: {{t|be|рэ́заць|impf}}, {{t|be|секчы́|impf}}, {{t|be|рубі́ць|impf}} {{qualifier|axe}}
 * Bengali: {{t|bn|কাটা|tr=kaţa}}
 * Bulgarian: {{t+|bg|ре́жа}}
