/* Norwegian Bokmål */ additional <felt#49253064>

--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -238,7 +238,14 @@ From {{der|nb|de|Feld}}
 }}
 
 ===Etymology 2===
+From {{der|nb|gml|velt}}
 
+====Noun====
+{{nb-noun-mu}}
+
+# {{l|en|field}} {{q|in the military sense}}
+
+===Etymology 3===
 ====Verb====
 {{head|nb|verb form}}
 
@@ -246,6 +253,7 @@ From {{der|nb|de|Feld}}
 
 ===References===
 * {{R:The Bokmål Dictionary}}
+* NAOB [https://www.naob.no/søk/felt]
 
 ----
 
