--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -174,7 +174,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 {{rel-bottom}}
 
 =====Descendants=====
-* {{desc|bor=1|et|ploom}}
+* {{desc|bor=1|et|ploom}} {{i|or perhaps from a North Germanic language}}
 
 =====Translations=====
 {{trans-top|the fruit}}
