--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -174,6 +174,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 {{rel-bottom}}
 
 =====Descendants=====
+* {{desc|bor=1|gv|plumbis}}
 * {{desc|bor=1|ja|プラム|tr=puramu}}
 
 =====Translations=====
