--- a/en/坿/坿.13058.wikitext
+++ b/en/坿/坿.13058.wikitext
@@ -25,7 +25,10 @@
 # {{defn|lang=ja|sort=土05}}
 
 ====Readings====
-* {{ja-readings|on=[[ふ]] (fu)|kun=[[つける]] (tsukeru), [[いかだ]] (ikada)}}
+* {{ja-readings
+|goon=ぶ
+|kanon=ふ
+|kun=[[つける]] (tsukeru), [[いかだ]] (ikada)}}
 
 ----
 
