--- a/en/c/caught.6831.wikitext
+++ b/en/c/caught.6831.wikitext
@@ -10,8 +10,7 @@
 ** {{audio|en-us-inlandnorth-caught.ogg|Audio (US-Inland North)|lang=en}}
 * {{a|cot-caught}} {{IPA|/kɑt/|[kʰɑt]|lang=en}}
 ** {{audio|en-us-caught.ogg|Audio (US cot-caught merged)|lang=en}}
-* {{homophones|lang=en|cot}} {{qualifier|accents with cot-caught merger}}
-* {{homophones|lang=en|court}} {{qualifier|non-rhotic accents}}
+* {{homophones|lang=en|cot}} {{qualifier|accents with cot-caught merger}}, {{l|en|court}} {{qualifier|non-rhotic accents}}
 * {{rhymes|ɔːt|lang=en}}
 
 ===Adjective===
