/*Middle English*/ Added IPA and improved descendants, definition and etymology <flesh#49300010>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -314,15 +314,34 @@ From {{inh|en|enm|flesh}}, {{m|enm|flesch}}, {{m|enm|flæsch}}, from {{inh|en|an
 ==Middle English==
 
 ===Alternative forms===
-* [[flech]], [[fleesh]], [[fleisch]], [[fleish]], [[flesch]], [[flessh]]
+* {{alt|enm|flech|fleesh|fleisch|fleish|flesch|flessh|flæsch|flesche|flæsce|fless}}
 
 ===Etymology===
-From {{etyl|ang|enm}} {{m|ang|flǣsc}}, from {{etyl|gem-pro|enm}} {{m|gem-pro|*flaiską}}, from {{etyl|ine-pro|enm}} {{m|ine-pro|*pleh₁ḱ-||to tear, peel off}}.
+From {{inh|en|ang|flǣsċ}}, from {{inh|en|gem-pro|*flaiską}}, from {{etyl|ine-pro|enm}} {{m|ine-pro|*pleh₁ḱ-||to tear, peel off}}.
+
+===Pronunciation==
+* {{IPA|lang=enm|/flɛːʃ/|/flɛʃ/}}
 
 ===Noun===
-{{head|enm|noun}}
+{{enm-noun|-}}
 
-# [[#English|flesh]], [[meat]]
+# {{l|en|flesh}} {{gloss|especially that of a mammal}}
+# {{lb|enm|Christianity|theology}} A [[communion wafer]]
+# {{lb|enm|anatomy}} A [[muscle]]
+# [[meat]], {{l|en|flesh}} for consumption
+# A [[human]] or [[being]]
+# The [[body]], [[physical]] [[existence]], [[nature]] {{gloss|especially that of a human}}
+# [[sexual intercourse]], [[copulation]]
+
+====Usage notes====
+Much like with {{non-cog|en|fish}}, this word is a collective noun, but can be pluralised to refer to different meats.
 
 ====Descendants====
-* English: {{l|en|flesh}}
+* {{desc|en|flesh}}
+* {{desc|sco|flesch}}
+
+====References====
+* {{R:MED Online|entry=flē̆sh (n.) |id=MED16282 |accessdate=2018-04-08}}
+
+[[Category:enm:Sex]]
+[[Category:enm:Meats]]
