--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -314,7 +314,7 @@ From {{inh|en|enm|flesh}}, {{m|enm|flesch}}, {{m|enm|flæsch}}, from {{inh|en|an
 ==Middle English==
 
 ===Alternative forms===
-* {{alt|enm|flech|fleesh|fleisch|fleish|flesch|flessh|flæsch|flesche|flæsce|fless}}
+* {{alter|enm|flech|fleesh|fleisch|fleish|flesch|flessh|flæsch|flesche|flæsce|fless}}
 
 ===Etymology===
 From {{inh|en|ang|flǣsċ}}, from {{inh|en|gem-pro|*flaiską}}, from {{etyl|ine-pro|enm}} {{m|ine-pro|*pleh₁ḱ-||to tear, peel off}}.
@@ -334,7 +334,7 @@ From {{inh|en|ang|flǣsċ}}, from {{inh|en|gem-pro|*flaiską}}, from {{etyl|ine-
 # [[sexual intercourse]], [[copulation]]
 
 ====Usage notes====
-Much like with {{non-cog|en|fish}}, this word is a collective noun, but can be pluralised to refer to different meats.
+Much like with {{noncog|en|fish}}, this word is a collective noun, but can be pluralised to refer to different meats.
 
 ====Descendants====
 * {{desc|en|flesh}}
