t+tl:[[diretso]] ([[WT:EDIT|Assisted]]) <straight#49303843>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -357,6 +357,7 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 {{trans-mid}}
 * Portuguese: {{t+|pt|direto}}
 * Romanian: {{t+|ro|direct}}
+* Tagalog: {{t|tl|diretso}}
 {{trans-bottom}}
 
 {{trans-top|continuously}}
