t+ne:[[{{t-needed}}]] t+bo:[[{{t-needed}}]] t-balance ([[WT:EDIT|Assisted]]) <find#49328457>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -142,9 +142,9 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Kazakh: {{t+|kk|табу|sc=Cyrl}}
 * Khmer: {{t|km|រកឃើញ|tr=rɔɔk kʰəəñ|sc=Khmr}}
 * Korean: {{t+|ko|찾다}}
+{{trans-mid}}
 * Kurdish:
 *: Sorani: {{t|ckb|دیتنه‌وه‌|sc=ku-Arab}}, {{t|ckb|دۆزینه‌وه‌|sc=ku-Arab}}
-{{trans-mid}}
 * Kyrgyz: {{t+|ky|табуу|sc=Cyrl}}
 * Lao: {{t|lo|ບອກ|sc=Laoo}}
 * Latgalian: {{t|ltg|atrast}}, {{t|ltg|rast}}, {{t|ltg|savaicuot}}
@@ -156,6 +156,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Maltese: {{t-needed|mt}}
 * Mizo: {{t|lus|hmu}}, {{t|lus|hmuchhuak}}
 * Mongolian: {{t+|mn|олох|sc=Cyrl}}
+* Nepali: {{t-needed|ne}}
 * Ngazidja Comorian: {{t|zdj|uparisa}}
 * Norman: {{t|nrf|trouver}}
 * North Frisian: {{qualifier|Mooring}} {{t|frr|fine}}, {{qualifier|Föhr-Amrum}} {{t|frr|finj}}
@@ -187,6 +188,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Tajik: {{t+|tg|ёфтан|sc=Cyrl}}, {{t+|tg|пайдо кардан|sc=Cyrl}}
 * Tatar: {{t+|tt|табарга|sc=Cyrl}}
 * Thai: {{t+|th|พบ}}, {{t+|th|เจอ}}
+* Tibetan: {{t-needed|bo}}
 * Turkish: {{t+|tr|bulmak}}
 * Turkmen: {{t|tk|tapmak}}
 * Tuvan: {{t|tyv|тывар}}
