--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -32,16 +32,16 @@ The character {{lang|zh|春}} itself is probably a variant of {{och-l|屯}} as t
 |m=chūn
 |m-s=cun1
 |c=ceon1
-|c-t=
-|g=
-|h=pfs=chhûn
-|j=
-|mb=
+|c-t=cun1
+|g=cun1
+|h=pfs=chhûn;gd=cun1
+|j=cung1
+|mb=ché̤ng
 |md=chŭng
 |mn=chhun
 |mn-t=cung1
 |w=1tshen
-|x=
+|x=qyn1
 |mc=y
 |oc=y
 |ma=y
