/* Etymology 1 */ cleanup <port#49339595>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -13,7 +13,7 @@
 
 ===Etymology 1===
 [[File:Dubrovnik-port.jpg|right|thumb|The old port of [[Dubrovnik]]]]
-From {{etyl|ang|en}} {{m|ang|port}}, from {{etyl|la|en}} {{m|la|portus||port, harbour}}, ultimately from {{etyl|ine-pro|en}} {{m|ine-pro|*pértus||crossing}} (and thus distantly cognate with {{m|en|ford}}).
+From {{der|en|ang|port}}, from {{der|en|la|portus||port, harbour}}, ultimately from {{der|en|ine-pro|*pértus||crossing}} (and thus distantly cognate with {{m|en|ford}}).
 
 ====Noun====
 {{en-noun}}
