/* Etymology 4 */ cleanup <port#49339616>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -385,7 +385,7 @@ From {{der|en|fro|porter}}, from {{der|en|la|portāre||carry}}. Akin to {{m|en|t
 {{trans-bottom}}
 
 ===Etymology 4===
-Named from {{etyl|pt|en}} [[Oporto]], a city in [[Portugal]] from whence the wines were originally shipped.
+Named from {{der|en|pt|Porto}}, a city in [[Portugal]] from whence the wines were originally shipped.
 
 ====Noun====
 {{en-noun|~}}
