--- a/en/昳/昳.16988.wikitext
+++ b/en/昳/昳.16988.wikitext
@@ -14,7 +14,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=[[dit6]]|y=dit6}}
+{{yue-hanzi|jyut=dit6|y=dit6}}
 
 # {{defn|lang=yue|sort=日05}}
 
@@ -28,7 +28,10 @@
 # {{defn|lang=ja|sort=日05}}
 
 ====Readings====
-{{ja-readings|goon=[[でち]] (dechi)|kanon=[[てつ]] (tetsu)|kun=[[かたむく]] (katamuku)}}
+{{ja-readings
+|goon=でち
+|kanon=てつ
+|kun=かたむ-く}}
 
 ----
 
@@ -44,7 +47,7 @@
 ==Vietnamese==
 
 ===Han character===
-{{vi-readings|rs=日05|hanviet=điệt}}
+{{vi-hantu|rs=日05|điệt}}
 
 # {{defn|lang=vi|sort=日05}}
 
