--- a/en/坤/坤.13031.wikitext
+++ b/en/坤/坤.13031.wikitext
@@ -16,9 +16,18 @@
 ===Pronunciation===
 {{zh-pron
 |m=kūn
+|m-s=
 |c=kwan1
+|c-t=
+|g=
+|h=pfs=
+|j=
+|mb=kó̤ng
+|md=
 |mn=khun
+|mn-t=
 |w=1khun
+|x=
 |mc=y
 |oc=y
 |cat=n,a
