--- a/en/昧/昧.16975.wikitext
+++ b/en/昧/昧.16975.wikitext
@@ -8,6 +8,9 @@
 # [[obscure]], [[dark]]
 # [[darken]]
 
+====Derived characters====
+* {{l|mul|[[𮦠]]}}
+
 ====References====
 * {{Han ref|kx=0493.120|dkj=13846|dj=0857.010|hdz=21497.010|uh=6627|ud=26151|bh=AC4E|bd=44110}}
 
