t+az:[[kəsmək]] ([[WT:EDIT|Assisted]]) <cut#49362984>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -505,6 +505,7 @@ From {{inh|en|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|enm|ketten|t
 * Assamese:
 *: Eastern: {{t|as|কটা}}
 *: Central: {{t|as|কাটা}}
+* Azerbaijani: {{t+|az|kəsmək}}
 * Belarusian: {{t|be|рэ́заць|impf}}, {{t|be|секчы́|impf}}, {{t|be|рубі́ць|impf}} {{qualifier|axe}}
 * Bengali: {{t|bn|কাটা|tr=kaţa}}
 * Bulgarian: {{t+|bg|ре́жа}}
