t+az:[[kəsmək]] ([[WT:EDIT|Assisted]]) <cut#49367432>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -584,6 +584,7 @@ From {{inh|en|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|enm|ketten|t
 * Afrikaans: {{t|af|sny}}
 * Arabic: {{t+|ar|قَطَعَ}}
 * Armenian: {{t+|hy|կտրատել}}
+* Azerbaijani: {{t+|az|kəsmək}}
 * Bengali: {{t|bn|কাটা}}
 * Bulgarian: {{t+|bg|режа}}, {{t+|bg|сека}}, {{t+|bg|разсичам}}
 * Burmese: {{t+|my|ညှပ်}}
