--- a/en/愷/愷.15690.wikitext
+++ b/en/愷/愷.15690.wikitext
@@ -47,7 +47,10 @@
 # [[joyful]]
 
 ====Readings====
-* {{ja-readings|on=[[かい]] (kai), [[がい]] (gai)|kun=[[たのしむ]] (tanoshimu)}}
+* {{ja-readings
+|on=がい, かい
+|kun=たの-しむ, やわ-らぐ
+}}
 
 ----
 
