--- a/en/倨/倨.11040.wikitext
+++ b/en/倨/倨.11040.wikitext
@@ -18,11 +18,18 @@
 ===Pronunciation===
 {{zh-pron
 |m=jù
+|m-s=
 |c=geoi3
+|c-t=
+|g=
 |h=pfs=
+|j=
+|mb=
 |md=
 |mn=kù
+|mn-t=
 |w=
+|x=
 |mc=y
 |oc=y
 |cat=a,v
@@ -50,7 +57,10 @@
 # {{defn|lang=ja|sort=人08}}
 
 ====Readings====
-* {{ja-readings|on=[[きょ]] (kyo), [[こ]] (ko)|kun=[[おごる]] (ogoru)}}
+{{ja-readings
+|goon=こ
+|kanon=きょ
+|kun=おご-る}}
 
 ----
 
