split/merge. hmm! need to check pdc ... <butter#49384334>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -186,6 +186,7 @@ Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{d
 * Afrikaans: {{t+|af|botter}}
 * Akkadian: {{t|akk|𒉌𒉣𒈾|tr=ḫimētu}}
 * Albanian: {{t+|sq|gjalpë|m}}
+* Alemannic German: {{t|gsw|Anke|m}}, {{t|gsw|Butter|m}}
 * American Sign Language: {{t|ase|H@TipPalm-PalmDown-OpenB@CenterChesthigh-PalmUp Contact H@BasePalm H@TipPalm Contact H@BasePalm H@TipPalm Contact H@BasePalm}}
 * Amharic: {{t|am|ቅቤ}}
 * Arabic: {{t|ar|زُبْدَة|f}}
@@ -197,6 +198,7 @@ Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{d
 * Azerbaijani: {{t+|az|yağ}}
 * Bashkir: {{t|ba|май|sc=Cyrl}}
 * Basque: {{t+|eu|gurin}}
+* Bavarian: {{t|bar|Budda|m}}, {{t|bar|Budan|m}}
 * Belarusian: {{t|be|ма́сла|n}}
 * Bengali: {{t|bn|মাখন}}
 * Breton: {{t+|br|amanenn|m}}
@@ -219,6 +221,7 @@ Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{d
 * Dalmatian: {{t|dlm|butir|m}}
 * Danish: {{t+|da|smør|n}}
 * Dutch: {{t+|nl|boter|f}}
+* East Central German: {{t|gmw-ecg|Putter|f}} {{q|Silesian}}
 * Erzya: {{t|myv|ой|f}}
 * Esperanto: {{t+|eo|butero}}
 * Estonian: {{t+|et|või}}
@@ -230,10 +233,6 @@ Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{d
 * Galician: {{t+|gl|manteiga|f}}
 * Georgian: {{t|ka|კარაქი}}
 * German: {{t+|de|Butter|f}}
-*: Alemannic German: {{t|gsw|Anke|m}}, {{t|gsw|Butter|m}}
-*: Bavarian: {{t|bar|Budda|m}}, {{t|bar|Budan|m}}
-*: Pennsylvania German: {{t|pdc|Booter|f}}
-*: Silesian German: {{t|sli|Putter|f}}
 * Gottscheerish: {{t|gmw-gts|púttər|m|f|n}}
 * Greek: {{t+|el|βούτυρο|n}}
 *: Ancient Greek: {{t|grc|βούτυρον|n}}
@@ -301,7 +300,7 @@ Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{d
 * Osage: {{t|osa|paazénii wéli}}
 * Ossetian: {{t|os|нæлхæ}}
 * Ottoman Turkish: {{t|ota|تره‌یاغی|tr=tereyağı}}, {{t|ota|ياغ|tr=yağ}}
-* Pennsylvania German: {{t|pdc|Budder|m}}
+* Pennsylvania German: {{t|pdc|Budder|m}}, {{t|pdc|Booter|f}}
 * Persian: {{t+|fa|کره|tr=kare}}, {{t+|fa|مسکه|tr=maske|sc=fa-Arab}}
 * Polish: {{t+|pl|masło|n}}
 * Portuguese: {{t+|pt|manteiga|f}}
