--- a/en/惠/惠.15605.wikitext
+++ b/en/惠/惠.15605.wikitext
@@ -63,10 +63,14 @@
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=혜|eumhun=|rv=hye|mr=hye|y=hyey}}
+{{ko-hanja|hangeul=혜|eumhun=은혜|rv=hye|mr=hye|y=hyey}}
 
-# {{defn|lang=ko|sort=心08}}
+# [[grace]]
 
+====Compounds====
+* [[恩惠]] ([[은혜]], eun-hye) : [[grace]]
+* [[惠澤]] ([[혜택]], hye-taek) : [[benefit]]
+* [[受惠]] ([[수혜]], su-hye) : [[benefit]]
 ----
 
 ==Vietnamese==
