--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -243,6 +243,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 {{trans-bottom}}
 
 {{trans-top|line of family descent}}
+* Assamese: {{t+|as|ঠাল}}
 * Finnish: {{t|fi|sukuhaara}}
 * French: {{t+|fr|branche|f}}
 * Ido: {{t+|io|brancho}}, {{t+|io|ramo}}
