/* French */ alternative <pull#49393830>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -394,7 +394,7 @@ From Low German {{m|nds|bulle}}.
 {{clipping|pull-over|lang=fr}}, from {{der|fr|en|pullover}}.
 
 ===Pronunciation===
-* {{fr-IPA|poul}}
+* {{fr-IPA|pule|poul}}
 * {{audio|Fr-pull.ogg|audio|lang=fr}}
 
 ===Noun===
