/*Middle English*/ <skirt#49417488>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -315,3 +315,12 @@
 [[Category:English basic words]]
 [[Category:en:Clothing]]
 [[Category:en:Skirts]]
+
+----
+
+==Middle English==
+
+===Noun===
+{{head|enm|noun}}
+
+# {{alternative form of|lang=enm|skyrte}}
