--- a/en/停/停.11116.wikitext
+++ b/en/停/停.11116.wikitext
@@ -37,7 +37,7 @@
 # to [[stop]], to [[halt]]
 # to [[park]] (a car)
 
-=Interjection=
+===Interjection===
 {{phrasebook|zh}}
 #Halt! (used in imperative, command situations)
 
