--- a/en/愫/愫.15678.wikitext
+++ b/en/愫/愫.15678.wikitext
@@ -4,7 +4,6 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=95093|canj=PQMF|ids=⿰忄素}}
 
-# [[guileless]], [[sincere]], [[honest]]
 
 ====References====
 * {{Han ref|kx=0396.120|dkj=10986|dj=0734.190|hdz=42335.100|uh=612B|ud=24875|bh=DD68|bd=56680}}
@@ -24,9 +23,12 @@
 |ma=
 |cat=a
 }}
+===Definitions===
+{{zh-hanzi}}
 
+# [[guileless]], [[sincere]], [[honest]]
 ====Compounds====
-* {{zh-l|情愫}}
+{{zh-der|情愫}}
 
 ----
 
