--- a/en/坙/坙.13020.wikitext
+++ b/en/坙/坙.13020.wikitext
@@ -13,7 +13,7 @@
 ==Chinese==
 {{zh-see|巠|v}}
 
-====References====
+===References===
 * [http://chardb.iis.sinica.edu.tw/char/9050 International Encoded Han Character and Variants Database]
 
 ----
