Reverted edits by [[Special:Contributions/165.225.72.51|165.225.72.51]]. If you think this rollback is in error, please leave a message on my talk page. <flesh#49423607>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -54,7 +54,7 @@ From {{inh|en|enm|flesh}}, {{m|enm|flesch}}, {{m|enm|flæsch}}, from {{inh|en|an
 * Arabic: {{t|ar|لَحْم|m}}
 *: Egyptian Arabic: {{t|arz|لحم|m|tr=laḥm|sc=Arab}}
 * Armenian: {{t+|hy|միս}}
-* Bulgarian: {{t+|bg|месо́|n|sc=Cyrl}}
+* Bulgarian: {{t+|bg|месо|n|sc=Cyrl}}
 * Catalan: {{t+|ca|carn|f}}
 * Chinese:
 *: Mandarin: {{t-needed|cmn}}
@@ -121,7 +121,7 @@ From {{inh|en|enm|flesh}}, {{m|enm|flesch}}, {{m|enm|flæsch}}, from {{inh|en|an
 
 {{trans-top|animal tissue as food}}
 * Armenian: {{t+|hy|միս}}
-* Bulgarian: {{t+|bg|месо́|n|sc=Cyrl}}
+* Bulgarian: {{t+|bg|месо|n|sc=Cyrl}}
 * Catalan: {{t+|ca|carn|f}}
 * Chinese:
 *: Min Nan: {{t+|nan|肉|tr=bah4|sc=Hani}}
@@ -152,7 +152,7 @@ From {{inh|en|enm|flesh}}, {{m|enm|flesch}}, {{m|enm|flæsch}}, from {{inh|en|an
 
 {{trans-top|human body entity}}
 * Armenian: {{t+|hy|մարմին}}
-* Bulgarian: {{t+|bg|тя́ло|n|sc=Cyrl}}
+* Bulgarian: {{t+|bg|тяло|n|sc=Cyrl}}
 * Danish: {{t+|da|krop}}
 * French: {{t+|fr|corps}}
 * German: {{t+|de|Fleisch|n}}, {{t+|de|Leib|m}}
@@ -203,7 +203,7 @@ From {{inh|en|enm|flesh}}, {{m|enm|flesch}}, {{m|enm|flæsch}}, from {{inh|en|an
 {{trans-bottom}}
 
 {{trans-top|colour}}
-* Bulgarian: {{t+|bg|теле́сен|sc=Cyrl}}
+* Bulgarian: {{t+|bg|телесен|sc=Cyrl}}
 * Catalan: {{t+|ca|carn|f}}
 * Chinese:
 *: Cantonese: {{t|yue|肉色|tr=juk6 sik1}}
@@ -219,7 +219,7 @@ From {{inh|en|enm|flesh}}, {{m|enm|flesch}}, {{m|enm|flæsch}}, from {{inh|en|an
 * Korean: {{t|ko|살색}}, {{t+|ko|살구색}}
 * Polish: {{t+|pl|cielisty|m}}
 * Portuguese: {{t+|pt|bege}}
-* Russian: {{t+|ru|теле́сный}}
+* Russian: {{t+|ru|телесный}}
 * Spanish: {{t+|es|carne|f}}
 {{trans-bottom}}
 
