--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -13,7 +13,7 @@
 From {{etyl|enm|en}} {{m|enm|costen}}, from {{etyl|fro|en}} {{m|fro|coster}}, {{m|fro|couster||to cost}}, from {{etyl|ML.|en}} {{m|la|costare}}, from {{etyl|la|en}} {{m|la|constare||stand together, stand at, cost}}, from {{m|la|com-}} + {{m|la|stare||stand}}.
 
 ====Verb====
-{{en-verb|costs|costing|cost|past2=costed}} See Usage notes.
+{{en-verb|costs|costing|cost|past2=costed}}
 
 # To [[incur]] a [[charge]]; to require payment of a [[price]].
 #: {{ux|en|This shirt '''cost''' $50, while this was cheaper at only $30.}}
