--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -108,7 +108,7 @@ The verb is from {{etyl|enm|en}} {{m|enm|briggen}}, from {{etyl|ang|en}} {{m|ang
 * Aragonese: {{t+|an|puent|m}}
 * Aramaic:
 *: Classical Syriac: {{t|syc|ܓܫܪܐ|m|tr=gešrāʾ|sc=Syrc}}
-*: Hebrew: {{t|arc|גֶּשֶׁר|m|tr=gešer}}
+*: Hebrew: {{t|arc|גֶּשֶׁר|m|tr=gésher}}
 * Armenian: {{t+|hy|կամուրջ}}
 * Aromanian: {{t|rup|punti|f}}, {{t|rup|pumhi|f}}
 * Assamese: {{t|as|দলং}}, {{t|as|সেঁতু}}, {{t|as|সাঁকো}}
@@ -153,7 +153,7 @@ The verb is from {{etyl|enm|en}} {{m|enm|briggen}}, from {{etyl|ang|en}} {{m|ang
 * Gujarati: {{t|gu|પુલ|tr=pul|sc=Gujr}}
 * Hausa: {{t|ha|kadarko}}
 * Hawaiian: {{t|haw|uapo}}
-* Hebrew: {{t+|he|גֶשֶר|m|tr=gésher}}
+* Hebrew: {{t+|he|גֶשֶׁר|m|tr=gésher}}
 * Hindi: {{t+|hi|पुल|m|tr=pul|sc=Deva}}
 * Hungarian: {{t+|hu|híd}}
 * Hunsrik: {{t|hrx|Brick|f}}
