{{zh-forms||alt=仃-second round simplified}} https://upload.wikimedia.org/wikipedia/commons/b/bb/Second_Chinese_Character_Simplification_Scheme_%28Draft%29.pdf also https://commons.wikimedia.org/wiki/File:仃车往右.jpg <停#49434806>

--- a/en/停/停.11116.wikitext
+++ b/en/停/停.11116.wikitext
@@ -11,7 +11,7 @@
 ----
 
 ==Chinese==
-{{zh-forms}}
+{{zh-forms||alt=仃-second round simplified}}
 [[File:Stop sign China.svg|thumb|100px]]
 
 ===Glyph origin===
