--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -63,6 +63,7 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 ====Translations====
 {{trans-top|to be supported by a liquid}}
 * Arabic: {{t|ar|طَفَا}}
+* Assamese: {{t+|as|ওপঙা}}, {{t+|as|ভহা}} {{q|Eastern}}, {{t+|as|ভাহা}} {{q|Central}}
 * Belarusian: {{qualifier|abstract}} {{t|be|пла́ваць|impf}}, {{t|be|папла́ваць|pf}}, {{qualifier|concrete}} {{t|be|плыць|impf}}, {{t|be|паплы́ць|pf}}
 * Bulgarian: {{t+|bg|плавам}}
 * Burmese: {{t+|my|မျော}}
