--- a/en/健/健.11125.wikitext
+++ b/en/健/健.11125.wikitext
@@ -1,11 +1,15 @@
 {{character info/new}}
 ==Translingual==
+{{stroke order|strokes=10}}
 
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=25240|canj=ONKQ|ids=⿰亻建}}
 
+====Derived characters====
+* {{l|mul|[[𮧨]], [[𨫡]], [[𮅿]], [[𩅋]]}}
+
 ====References====
-* {{Han ref|kx=0111.110|dkj=00875|dj=0237.100|hdz=10184.090|uh=5065}}
+{{Han ref|kx=0111.110|dkj=00875|dj=0237.100|hdz=10184.090|uh=5065}}
 
 ----
 
