t+mww:[[{{t-needed}}]] t+ne:[[{{t-needed}}]] t-balance ([[WT:EDIT|Assisted]]) <speak#49450719>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -186,11 +186,12 @@ From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, al
 * Meänkieli: {{t|fit|praatata}}
 * Mingrelian: {{t-needed|xmf}}
 * Mirandese: {{t|mwl|falar}}
-* Mongolian: {{t+|mn|ярих|sc=Cyrl}}
 {{trans-mid}}
+* Mongolian: {{t+|mn|ярих|sc=Cyrl}}
 * Nahuatl: {{t|nah|tlatoa}}
 * Navajo: {{t|nv|yáshtiʼ}}
 * Neapolitan: {{t|nap|parlà}}
+* Nepali: {{t-needed|ne}}
 * Ngarrindjeri: {{t|nay|kungun}}
 * Norman: {{t|nrf|pâler}} {{qualifier|Jersey}}, {{t|nrf|parlaïr}} {{qualifier|Guernsey}}
 * North Frisian: {{qualifier|Mooring}} {{t|frr|spreege}}; {{qualifier|Föhr-Amrum}} {{t|frr|snaake}}, {{t|frr|spreeg}}
@@ -264,6 +265,7 @@ From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, al
 * Walloon: {{t+|wa|cåzer}}, {{t+|wa|divizer}}, {{t+|wa|djåzer}}, {{t+|wa|pårler}}
 * Welsh: {{t+|cy|siarad}}, {{t+|cy|llefaru}}
 * West Frisian: {{t|fy|sprekke}}
+* White Hmong: {{t-needed|mww}}
 * Yiddish: {{t+|yi|רעדן}}
 * Zhuang: {{t-needed|za}}
 * Zulu: {{t|zu|khuluma|alt=-khuluma}}
