--- a/en/愥/愥.15672.wikitext
+++ b/en/愥/愥.15672.wikitext
@@ -22,5 +22,10 @@
 |cat=
 }}
 
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
 ====References====
 * [http://www.cns11643.gov.tw/AIDB/query_general_view.do?page=3&code=6479 Chinese National Standards (Master Ideographs Seeker for CNS 11643)]
