--- a/en/惨/惨.15613.wikitext
+++ b/en/惨/惨.15613.wikitext
@@ -1,17 +1,21 @@
 {{also|慘}}
 {{character info/new}}
 ==Translingual==
+{{ja-forms|惨|惨|[[慘]]}} <!-- Same simplification in Japanese shinjitai and simplified Chinese -->
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=08|sn=11|four=|canj=PIKH|ids=⿰忄参}}
+{{Han char|rn=61|rad=心|as=08|sn=11|four=|canj=PIKH|ids=⿰忄参(GHJK),⿰忄叁(T)}}
+
+====Related characters====
+* {{l|mul|[[慘]]}} ''({{w|Traditional Chinese|Traditional form}} of 惨)''
 
 ====References====
-* {{Han ref|kx=0392.181|dkj=10850|dj=0728.030|hdz=42320.010|uh=60E8|ud=24808}}
+{{Han ref|kx=0392.181|dkj=10850|dj=0728.030|hdz=42320.010|uh=60E8}}
 
 ----
 
 ==Chinese==
-{{zh-see|慘}}
+{{zh-see|慘|sv}}
 
 ----
 
@@ -21,7 +25,7 @@
 ===Kanji===
 {{ja-kanji|grade=c|rs=心08|kyu=慘}}
 
-# wretched
+# [[wretched]]
 
 ====Readings====
 {{ja-readings
@@ -39,3 +43,15 @@
 {{ko-hanja|hangeul=[[참]], [[침]]|eumhun=|rv=cham, chim|mr=ch'am, ch'im|y=cham, chim}}
 
 # {{defn|lang=ko|sort=心08}}
+
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-hantu|rs=心08|[[thảm]], [[thom]]}}
+
+# {{defn|lang=vi|sort=心08}}
+
+====References====
+* [http://nomfoundation.org/common/nom_details.php?codepoint=60E8 Nom Foundation]
