--- a/en/惪/惪.15615.wikitext
+++ b/en/惪/惪.15615.wikitext
@@ -5,8 +5,11 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=08|sn=11|four=|canj=JMP|ids=⿱直心}}
 
+====Derived characters====
+* {{l|mul|[[𣚅]]}}
+
 ====References====
-* {{Han ref|kx=0392.181|hdz=42309.030|uh=60EA|ud=24810}}
+{{Han ref|kx=0392.181|hdz=42309.030|uh=60EA}}
 
 ----
 
