t+ne:[[{{t-needed}}]] ([[WT:EDIT|Assisted]]) <come#49467477>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -243,6 +243,7 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * Maore Comorian: {{t|swb|ja|alt=uja}}
 * Mongolian: {{t+|mn|ирэх}}
 * Neapolitan: {{t|nap|venì}}
+* Nepali: {{t-needed|ne}}
 * Norman: {{t|nrf|v'nîn}}
 * North Frisian: {{qualifier|Mooring}} {{t|frr|kaame}}, {{qualifier|Föhr-Amrum}} {{t|frr|kem}}
 * Northern Thai: {{t|nod|ᨾᩣ|tr=ma|sc=Lana}}
